# universal-agent-embedding-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_MANUAL.md  LICENSE  README.md  README.zh.md  RESEARCH_PROPOSAL.md  SECURITY.md  SOP.md  VERIFICATION_SCORECARD.md  pyproject.toml
.github/workflows/: ci.yml
api/: server.py
benchmarks/: README.md
benchmarks/baselines/: fable5.example.json
benchmarks/manifests/: capability-batch.ci-example.json
benchmarks/results/: audit.json  benchmark-adapter.json  benchmark-adversarial.json  benchmark-capability.json  benchmark-context.json  benchmark-cost.json  benchmark-excellence.json  benchmark-live_matrix.json  benchmark-platform.json  benchmark-proxy.json  benchmark-quick.json  benchmark-scenario.json  capability-heldout-regrade.json  capability-matrix.json  cheating-live-measurement.json  context-live-measurement.json  cost-live-measurement.json  platform-discovery.json  scenario-live-measurement.json
config/: default.yaml
docs/: methodology.md
docs/api/: http.md  mcp.md
docs/architecture/: overview.md
docs/guides/: capability-batch.md  quickstart.md
mcp/: __init__.py  config.json  server.py
mcp/tools/: effort.py  memory.py  verify.py  workflow.py
scripts/: setup.sh  verify_candidate.py
skills/: agent-enhancement.md  effort-control.md  memory-management.md  verification-framework.md  workflow-guidance.md
src/: __init__.py  adversarial_verification.py  benchmark.py  capability_matrix.py  capability_tasks.py  cli.py  config.py  context_management.py  cost_model.py  excellence.py  extensions.py  guardrails.py  live_matrix.py  logger.py  observability.py  optimization.py  platform_runs.py  proxy_validation.py  scenario_benchmark.py  scenario_pack_2.py  scenario_pack_3.py
src/adapters/: __init__.py  command.py  interface.py  readiness.py
src/effort/: __init__.py  classifier.py  dispatch_phrases.py  interface.py  metrics.py  verification_depth.py
src/harness/: __init__.py  interface.py  local.py
(+104 files in other folders)
